<resources>
    <string name="app_name">Note.AI</string>

    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="note_ai">NOTE.AI</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_about__me_">About_Me_Activity</string>
    <string name="title_activity_add_courses">AddCoursesActivity</string>
    <string name="title_activity_course__home_page">Course_Home_pageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_sample">Sample</string>
    <string name="title_template_list">Templates</string>
    <string name="title_template_detail">Template Detail</string>
</resources>
